patchage (1.0.3) unstable;

  * Fix connections with Jack DBus

 -- David Robillard <d@drobilla.net>  Sat, 28 Nov 2020 08:53:57 +0000

patchage (1.0.2) stable;

  * Add support for exporting canvas as PDF
  * Bring back Jack buffer size selector
  * Configure based on compiler target OS for cross-compilation
  * Don't install 512x512 icons
  * Fix compilation with Jack DBus
  * Order ports deterministically
  * Restore messages pane visibility and height
  * Save window size and position when closed via window manager
  * Style messages pane to match canvas
  * Support Jack CV and OSC via metadata
  * Upgrade to waf 2.0.19

 -- David Robillard <d@drobilla.net>  Thu, 09 Apr 2020 12:29:59 +0000

patchage (1.0.0) stable;

  * Allow removing connections by selecting their handle and pressing delete
  * Fix font configuration on OSX
  * Integrate with Mac menu bar on OSX
  * Make port colours configurable
  * Remove LASH support and simplify UI
  * Remove Raul dependency
  * Support for DOT export for rendering with GraphViz
  * Support port pretty names via new Jack metadata API
  * Switch from FlowCanvas to Ganv (much improved looks and performance)
  * Use Mac style key bindings on OSX
  * Use XDG_CONFIG_HOME instead of ~/.patchagerc

 -- David Robillard <d@drobilla.net>  Mon, 28 Apr 2014 03:46:10 +0000

patchage (0.5.0) stable;

  * Add -J (--no-jack) command line option
  * Add missing COPYING file to distribution
  * Add more/larger icons
  * Add proper --help output and man page
  * Auto-arrange interface modules sanely (align corresponding inputs/outputs)
  * Build system and code quality improvements
  * Bump FlowCanvas dependency to 0.7.0
  * Fancy console info/warning/error logging
  * Fix Jack D-Bus support
  * Fix handling of ALSA duplex ports
  * Fix minor memory leaks and reduce memory consumption
  * Hide "split" module menu item when it is useless
  * Improve performance (dramatically for large setups)
  * Mac OS X .app bundle port
